--- a/jeecgboot-sdkg-generator/pom.xml
+++ b/jeecgboot-sdkg-generator/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.fastjrun.codeg.jeecgboot</groupId>
         <artifactId>jeecgboot-sdkg</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <artifactId>jeecgboot-sdkg-generator</artifactId>
     <dependencies>
