--- a/jeecgboot-codeg/pom.xml
+++ b/jeecgboot-codeg/pom.xml
@@ -46,17 +46,17 @@
             <dependency>
                 <groupId>com.fastjrun.codeg.jeecgboot</groupId>
                 <artifactId>jeecgboot-sdkg-api</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>com.fastjrun.codeg.jeecgboot</groupId>
                 <artifactId>jeecgboot-sdkg-client</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
             <dependency>
                 <groupId>com.fastjrun.codeg.jeecgboot</groupId>
                 <artifactId>jeecgboot-sdkg-provider</artifactId>
-                <version>1.0-SNAPSHOT</version>
+                <version>1.0</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
