--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <groupId>com.fastjrun.codeg.jeecgboot</groupId>
     <artifactId>jeecgboot-sdkg</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>jeecgboot</name>
     <description/>
     <url>http://fastjrun.com/</url>
